--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,5 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+android.defaults.buildfeatures.buildconfig=true
+ANTHROPIC_API_KEY=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
